# understanding-uncertainty

./: .gitignore  LICENSE  _quarto.yml  assignments.qmd  index.qmd  pyproject.toml  style.mplstyle  styles.css  syllabus.qmd
.quarto/idx/: about.qmd.json  assignments.qmd.json  index.qmd.json  syllabus.qmd.json
.quarto/project-cache/: deno-kv-file
.quarto/xref/: 017aafa7  15c8a121  30acda44  62600cc0  6a9f3b63  6d080582  83e94652  97e02444  9fc805c2  INDEX  e5a36ac7
assignments/: assignment-00.html  assignment-00.ipynb  assignment-01.ipynb  assignment-02.ipynb  assignment-03.ipynb  assignment-04.ipynb  final-project.ipynb
data/: dice_rolls.csv  giannis-stats-24-25.csv  sga-stats-24-25.csv  unemployment-data-cleaned.csv  unemployment-data-raw.csv
docs/: about.html  assignments.html  index.html  robots.txt  search.json  sitemap.xml  syllabus.html
docs/assignments/: assignment-00-preview.html  assignment-00.html  assignment-00.ipynb  assignment-00.out.ipynb  assignment-01.html  assignment-02.html  assignment-03.html  assignment-04.html  final-project.html
docs/notebooks/: lecture-00-preview.html  lecture-00-slides.html  lecture-00.html  (+13 more)
notebooks/: lecture-00-slides.qmd  lecture-00.ipynb  lecture-00.qmd  lecture-01.ipynb  lecture-02.ipynb  lecture-03.ipynb  lecture-04.ipynb  lecture-05.ipynb  lecture-06.html  lecture-06.ipynb  lecture-07.ipynb  lecture-08.ipynb  lecture-09.ipynb  lecture-10.ipynb
slides/: custom.css  lecture-00-slides.ipynb  lecture-00-slides.qmd  lecture-01-slides.ipynb  lecture-01-slides.qmd  lecture-02-slides.ipynb  lecture-02-slides.qmd  lecture-03-slides.ipynb  lecture-03-slides.qmd  lecture-04-slides.qmd  lecture-05-slides.qmd  lecture-06-slides.qmd  lecture-07-slides.qmd  lecture-08-slides.qmd  lecture-09-slides.qmd
(+23 files in other folders)
