[tool.poetry]
name = "understanding-uncertainty"
version = "0.1.0"
description = "course materials"
authors = ["Joseph Rudoler <40604402+jrudoler@users.noreply.github.com>"]
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
numpy = "^2.1.3"
scipy = "^1.14.1"
matplotlib = "^3.9.2"
seaborn = "^0.13.2"
ipykernel = "^6.29.5"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
