[tool.poetry]
name = "understanding-uncertainty"
version = "0.1.0"
description = "course materials"
authors = ["Joseph Rudoler <40604402+jrudoler@users.noreply.github.com>"]
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
numpy = "^2.1.3"
scipy = "^1.14.1"
matplotlib = "^3.9.2"
seaborn = "^0.13.2"
ipykernel = "^6.29.5"
tabulate = "^0.9.0"
geopandas = "^1.0.1"
geodatasets = "^2024.8.0"
jupyterquiz = "^2.9.6.2"
scikit-learn = "^1.7.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
